Base SCSS Compile Correction

--- a/styles/base.css
+++ b/styles/base.css
@@ -182,7 +182,7 @@ footer {
       /* line 46, _main-page.scss */
       footer ul li img {
         padding: .3rem;
-        width: 15%; }
+        width: 3rem; }
   /* line 52, _main-page.scss */
   footer p, footer a, footer li {
     color: #3b3b3b;
