--- a/styles/_main-page.scss
+++ b/styles/_main-page.scss
@@ -1,3 +1,9 @@
+article {
+	padding: 6rem 0;
+	li {
+		position: absolute;
+	}
+}
 ul {
 	list-style: none;
 	li {
@@ -8,14 +14,6 @@ ul {
 	}
 	a {
 		text-decoration: none;
-	}
-}
-article {
-	padding: 19% 0 0 0;
-	ul {
-		li {
-			border-bottom: 2px solid #fff;
-		}
 	}
 }
 // h1 {
