--- a/styles/_aboutme.scss
+++ b/styles/_aboutme.scss
@@ -2,19 +2,19 @@
 	line-height: 2.3125rem;
 	text-align: center;
 	img {
-		padding: .3125rem 0 0 0;
+		padding: 15px 30px 0;
 		width: 100%;
 	}
 	h1 {
 		font-family: 'Architects Daughter', cursive;
-		margin: 3.125rem 0 3.125rem;
+		margin: 2rem 0 0;
 		font-size: 4rem;
 	}
 	p {
 		display: block;
 		margin: 1.875rem auto;
 		font-size: 1.1rem;
-		font-weight: 200;
+		font-weight: 300;
 		letter-spacing: .15rem;
 		color: $light-gray;
 		line-height: 1.75rem;
@@ -22,6 +22,6 @@
 		padding: 0 2rem;
 	}
 	section	{
-		padding-bottom: 4rem;
+		padding-bottom: 2rem;
 	}
 }
