--- a/styles/_recipe-title.scss
+++ b/styles/_recipe-title.scss
@@ -6,7 +6,10 @@ h1 {
 }
 .recipe-title { 
 	position: relative;
-	padding: .9375rem 1.875rem 0;
+	padding: .9375rem 1.875rem;
+	li {
+		border-top: 1px solid #000;
+	}
 	a {
 		float: left;
 	}
