--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -1,9 +1,9 @@
 nav {
 	position: fixed;
 	z-index: 9999;
-	-webkit-box-shadow: 0 0 1rem #a3a3a3;
-	-moz-box-shadow: 0 0 1rem #a3a3a3;
-	box-shadow: 0 0 1rem #a3a3a3;
+	-webkit-box-shadow: 0 0 1rem rgba(163,163,163,0.3);
+	-moz-box-shadow: 0 0 1rem rgba(163,163,163,0.3);
+	box-shadow: 0 0 1rem rgba(163,163,163,0.3);
 	ul {
 		height: 40px;
 		max-width: $breakpoint-max;
