--- a/styles/_recipe-page.scss
+++ b/styles/_recipe-page.scss
@@ -1,8 +1,9 @@
 .recipe {
 	line-height: 2.3125rem;
 	text-align: center;
-	padding: 4.6rem 0;
+	// padding: 4.6rem 0;
 	img {
+		padding: 15px 30px 0;
 		width: 100%;
 	}
 	h1 {
