--- a/styles/_main-page.scss
+++ b/styles/_main-page.scss
@@ -1,5 +1,5 @@
 article {
-	padding: 6rem 0;
+	padding: 6rem 0 4rem;
 	li {
 		position: absolute;
 	}
@@ -26,9 +26,9 @@ footer {
 	background-color: $light-gray;
 	width: 100%;
 	text-align: center;
-	padding-bottom: 2rem;
+	padding: 4rem 0;
 	img {
-		padding: 2rem 0 0 0;
+		// padding: 2rem 0 0 0;
 		width: 40%;
 	}
 	h3 {
