--- a/styles/_recipe-title.scss
+++ b/styles/_recipe-title.scss
@@ -1,7 +1,7 @@
 h1 {
 	font-family: 'Architects Daughter', cursive;
-	margin: 1rem 0 1rem;
-	font-size: 4rem;
+	margin: .6rem 0;
+	font-size: 1.7rem;
 	text-align: center;
 }
 .recipe-title { 
@@ -35,6 +35,15 @@ h1 {
 			padding-top: .6rem;
 			font-weight: bold;
 			text-align: center;
+		}
+		span {
+			display: block;
+			position: absolute;
+			height: .1rem;
+			width: 21rem;
+			background: $light-gray;
+			opacity: 1;
+			margin-top: .9rem;
 		}
 	}
 }
